--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -27,9 +27,10 @@ a:hover {
 
 /* --- BODY --- */ 
 
-section {
+section#content {
 	width: 75%;
 	float: left;
+	box-sizing: border-box;
 	background-color: #3A4E7A;
 	color: #999999;
 }
