--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -1,3 +1,7 @@
+body {
+	font-family: Ubuntu, Courier;
+}
+
 /* --- HEADER --- */
 
 header {
@@ -45,6 +49,18 @@ nav {
 ul {
 	list-style-type: none;
 	padding-left: 20px;
+}
+
+.bullet {
+	padding-left: 10%;
+}
+
+.line {
+	padding-left: 10%;
+}
+
+.project {
+	padding-left: 10%;
 }
 
 li:before {
