--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -72,6 +72,15 @@ li:before {
 	clear: both;
 }
 
+button.collapsible {
+	background: none;
+	color: inherit;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 /* indentations */
 
 .bullet {
