--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -8,7 +8,12 @@ body {
 header {
 	/* border: 3px solid; */ 
 	background-color: #4CAF50;
-	padding-top: 20px;
+	/* padding-top: 20px; */
+	position: absolute;
+	bottom: 50%;
+	right: 50%;
+	transform: translateX(50%) translateY(50%);
+	/* on-click >> add the padding (bounce effect?), increase bottom to 90%, then remove position, bottom, right, and transform */
 }
 
 header span {
