--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -11,8 +11,9 @@ header {
 }
 
 header.up {
-	padding-top: 20px;
-	bottom: 50%:
+	padding-top: 0px;
+	bottom: 50%;
+	transform: translateY(50%);
 }
 
 header.down {
