--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -1,12 +1,12 @@
 body {
 	font-family: Ubuntu, Courier;
-	background-color: #4CAF50;
+	background-color: green;
 }
 
 /* --- HEADER --- */
 
 header {
-	background-color: #4CAF50;
+	background-color: green;
 }
 
 header.up {
@@ -57,7 +57,7 @@ section#content {
 	width: 75%;
 	float: left;
 	box-sizing: border-box;
-	background-color: #4CAF50;
+	background-color: green;
 	color: #cccccc;
 }
 
@@ -69,7 +69,7 @@ section#content.border {
 nav#menu {
 	width: 25%;
 	float: right;
-	background-color: #4CAF50;
+	background-color: green;
 	box-sizing: border-box;
 	color: #cccccc;
 }
