--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -117,6 +117,11 @@ h2.empty, h3.empty` {
 	cursor: default;
 }
 
+.lineset {
+	border-style: dashed;
+	border-left: 1px;
+}
+
 /* plus/minus signs for expand/collapse options */
 
 .collapsible::after {
