--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -119,7 +119,7 @@ h2.empty, h3.empty` {
 
 .lineset {
 	border-style: dashed;
-	border-left-width: 1px;
+	border-width: 0px 0px 0px 1px;
 }
 
 /* plus/minus signs for expand/collapse options */
