--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -56,6 +56,7 @@ a:hover {
 section#content {
 	width: 75%;
 	float: left;
+	padding-bottom: 20px;
 	box-sizing: border-box;
 	background-color: green;
 	color: #cccccc;
@@ -69,6 +70,7 @@ section#content.border {
 nav#menu {
 	width: 25%;
 	float: right;
+	padding-bottom: 10px;
 	background-color: green;
 	box-sizing: border-box;
 	color: #cccccc;
