--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -1,4 +1,5 @@
 body {
+	margin: 24px;
 	font-family: Ubuntu, Courier;
 	background-color: green;
 }
@@ -157,7 +158,25 @@ h2.empty, h3.empty` {
 
 .project a {
 	padding-left: 5%;
+	padding-right: 1%;
 }
+
+.role {
+	padding-left: 1%;
+	border-left-width: 1px;
+	border-left-style: dashed;
+}
+
+.role-wrap {
+	padding-left: 5%;
+}
+
+.role-wrap .role {
+	padding-left: 1%;
+	padding-right: 1%;
+	border-left-width: 0px;
+}
+
 
 /* --- FOOTER --- */
 
