--- a/siteprep/styles.css
+++ b/siteprep/styles.css
@@ -10,7 +10,10 @@ html {
 }
 
 body {
-	margin: 24px 24px 12px 24px;
+	margin-top: var(--body-margin-top);
+	margin-bottom: var(--body-margin-bottom);
+	margin-left: 24px;
+	margin-right: 24px;
 	min-height: calc(100vh - var(--body-margin-top) - var(--body-margin-bottom));
 	font-family: Ubuntu, Courier;
 	background-color: green;
@@ -119,8 +122,7 @@ nav#menu li:before {
 }
 
 .group {
-	/* TODO: should get the 98.4 value dynamically */
-	/* top and bottom margins on the body + total height of header with padding + total height of footer with padding */
+	/* top and bottom margins on the body + total height of header with padding + total height of footer with margin */
 	min-height: calc(100vh - 98px);
 }
 
