--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -181,12 +181,12 @@ div.line span.material-icons {
 }
 
 
-.project a, .entry a, .entry span {
+.entry a {
 	padding-left: 5%;
 	padding-right: 1%;
 }
 
-.role {
+span.role {
 	padding-left: 1%;
 	border-left-width: 1px;
 	border-left-style: dashed;
