--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -192,8 +192,10 @@ h2.empty, h3.empty` {
 	padding-left: 5%;
 }
 
-.entryset {
+.entryset.horiz {
 	display: none; /* needed for jQuery effects */
+	padding-left: 5%;
+	width: 100%; /* want this to fill 100% of lineset div */
 }
 
 .entry a, .entry span {
