--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -190,6 +190,7 @@ h2.empty, h3.empty` {
 	padding-top: 1px;
 	padding-bottom: 1px;
 	padding-left: 5%;
+	padding-right: 20px; /* originally for the arenas dropdown */
 }
 
 .entryset {
@@ -198,8 +199,15 @@ h2.empty, h3.empty` {
 }
 
 .entryset.horiz {
-	width: 100%; /* want this to fill 100% of lineset div */
 	padding-left: 5%;
+}
+
+/* a few tailored styles for the arenas dropdown */
+#hoops .entryset.horiz  {
+	text-align: right;  
+	border-right-width: 1px;
+	border-right-style: dashed;
+	padding-left: 0px;
 }
 
 .entry a, .entry span {
