--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -187,6 +187,8 @@ h2.empty, h3.empty` {
 .entryset {
 	display: none; /* needed for jQuery effects */
 	padding-left: 5%;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 /* a few tailored styles for the arenas dropdown */
