--- a/worklife/styles.css
+++ b/worklife/styles.css
@@ -3,6 +3,7 @@
 	--body-margin-top: 4vh;
 	--body-margin-bottom: 2vh;
 	--header-height: 1.5vh;
+	--header-padding-total: 4vh; /* needs to match jBounceUp */
 	--footer-height: 2vh;
 	--footer-margin: 2vh;
 }
@@ -141,7 +142,7 @@ nav#menu li:before {
 
 .group {
 	/* 100vh - top and bottom margins on the body - total height of header after animated padding - total height of footer with margin) */
-	min-height: calc(100vh - var(--body-margin-top) - var(--body-margin-bottom) - var(--header-height) - 2vh - var(--footer-height) - var(--footer-margin));
+	min-height: calc(100vh - var(--body-margin-top) - var(--body-margin-bottom) - var(--header-height) - var(--header-padding-total) - var(--footer-height) - var(--footer-margin));
 }
 
 /* collapsible headers */
